# xfce4-genmon-light-plugin

./: configure.ac.in
panel-plugin/: Makefile.am  genmonlight.desktop.in  main.c
